--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -12,7 +12,7 @@
     <h2 > Приветствую! </h2>
   </div>
   <div class="col-md-9 text-center">
-    <h2 > Эта страница поможет Вам немного узнать обо мне 😊 </h2>
+    <h2 > Эта страница поможет Вам немного узнать обо мне 😊 ;) </h2>
   </div>
 </div>
 
